possibly fixed all tests, cross fingers :)